# Laboratornaya-8

poetry_demo/: demo.py  pyproject.toml
task 2/: task2.py
task 4/: apy.py  pyproject.toml
task3/scr/tests/: test_calc.py
task5/: cli.py  pyproject.toml
