[tool.poetry]
name = "mycli"
version = "0.1.0"
description = "Моя CLI утилита"
authors = ["Твое Имя <email@example.com>"]

packages = [
    { include = "cli.py", from = "." }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mycli = "cli:hello"